--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -5,7 +5,7 @@ backend:
 media_folder: "public/uploads"
 public_folder: "/uploads"
 
-local_backend: true
+local_backend: false
 
 collections:
   # ---------- Site settings (Hero + Trip overview) ----------
